# qtools

./: .gitignore  LICENSE  README.md  in_silico_mutagenesis.py  mutagenesis_relNtRelevance.py  plot_variable_output_dims.py  prepare_training_data.py  simulate_data_on_given_tree.py  training.py
data/rRNA/: mutationscheme.json  train.csv  train.ph  train_minibatches.csv  train_patristic.csv  train_siamesebatches.csv
data/simdata/randomized_tree/: species_switching.csv  train.ph  train_minibatches.csv  train_patristic.csv  (+1 more)
models/: README.txt
qdashboard/: dashboard.py  qdash.yml
qdashboard/assets/: styling.css
qdashboard/callbacks/: __init__.py  dataselection_callbacks.py  in_silico_mutagenesis_callbacks.py  motifcreation_callbacks.py  plotting_callbacks.py  splitstree_callbacks.py  table_callbacks.py
qdashboard/scripts/: metadata_handling.py  motif.py  prep_data.py  styles.py  utils.py
qdeeplift/: qdeep.yml  qdeep_utils.py  scores_from_deeplift.py
qdeeplift/tools/: encoding.py  load_model_viv.py
qtools/: pyproject.toml  qnet.yml  requirements.txt  setup.py
qtools/qtools/: __init__.py  attribution_scores.py  data_handler.py  get_model.py  lossfunctions.py  motif.py  nexus.py  utils.py
qtools/qtools/data_tracking/: track_metadata.py  track_training.py
qtools/src/qtools/: data_prepper.py  encoding.py  get_model.py  motif.py  qscores.py  quartettroutines.py  simulate_data.py  variable_output_dims.py
qtools/src/qtools/data_tracking/: __init__.py  track_metadata.py  track_training.py
qtools/src/qtools/relative_relevance/: utils.py  visualize.py
(+2021 files in other folders)
