[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qtools"
version = "1.0.0"
description = "Toolbox to prepare data for siamese and quartet models, track this training and explore the trained models with in silico mutagenesis"
authors = [
  { name = "Vivian Brandenburg", email = "qtools@vivian-brandenburg.de" }
]
readme = ""  
requires-python = "==3.9.7"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Researchers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
]

[project.urls]
Homepage = "github-url"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

